@@ -1,3 +1,7 @@
+= HEAD
+
+* Make Roda#path work correctly in subclasses (jeremyevans)
+
 = 2.1.0 (2015-03-13)
 
 * Have add_file in the mailer plugin support blocks, which are called after the file has been added (jeremyevans)
